# homl3

./: README.md  poetry.toml  pyproject.toml
ch03/: classification.ipynb
ch04/: training_linear_models.ipynb
