[tool.poetry]
name = "homl3"
version = "0.1.0"
description = "repo to accompany the book HOML3"
authors = ["Heitor Carvalho Pinheiro <heitor.c.pinheiro@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"
pandas = "^2.1.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
